// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/stories/transferwise.test.ts host.currency = payee.currency != expense.currency = collective.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10094     | -105       | 11278                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.1173                   |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -105       | -11173               | -10094                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.1173                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency = collective.currency != host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10081     | -90        | 11265                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.1174                   |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -90        | -11174               | -10081                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.1174                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency = collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in USD | CREDIT | 10083     | -83        | 10083                | 10000                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1                        |
| EXPENSE | Expense in USD | DEBIT  | -10000    | -83        | -10000               | -10083                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1                        |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency != collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 11261     | -88        | 11261                | 11173                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1.1173                   |
| EXPENSE | Expense in EUR | DEBIT  | -11173    | -88        | -11173               | -11261                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1.1173                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency = collective.currency != host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10079     | -88        | 11261                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.1173                   |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -88        | -11173               | -10079                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.1173                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency = collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in USD | CREDIT | 10105     | -105       | 10105                | 10000                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1                        |
| EXPENSE | Expense in USD | DEBIT  | -10000    | -105       | -10000               | -10105                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1                        |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;
